--- a/demo.html
+++ b/demo.html
@@ -12,36 +12,42 @@
 <body>
 
 <div id="input_set1">
-    <p>MaxLength: 2,3,4,5</p>
-    <input type="text" maxlength="2"/>
-    <input type="text" maxlength="3"/>
-    <input type="text" maxlength="4"/>
-    <input type="text" maxlength="5"/>
+    <form action="#">
+        <p>MaxLength: 2,3,4,5</p>
+        <input type="text" maxlength="2"/>
+        <input type="text" maxlength="3"/>
+        <input type="text" maxlength="4"/>
+        <input type="text" maxlength="5"/>
+    </form>
 </div>
 
 <div id="input_set2">
-    <p>MaxLength: 1</p>
-    <input type="text" maxlength="1"/>
-    <input type="text" maxlength="1"/>
-    <input type="text" maxlength="1"/>
-    <input type="text" maxlength="1"/>
-    <input type="text" maxlength="1"/>
-    <input type="text" maxlength="1"/>
-    <input type="text" maxlength="1"/>
-    <input type="text" maxlength="1"/>
-    <input type="text" maxlength="1"/>
-    <input type="text" maxlength="1"/>
+    <form action="#">
+        <p>MaxLength: 1</p>
+        <input type="text" maxlength="1"/>
+        <input type="text" maxlength="1"/>
+        <input type="text" maxlength="1"/>
+        <input type="text" maxlength="1"/>
+        <input type="text" maxlength="1"/>
+        <input type="text" maxlength="1"/>
+        <input type="text" maxlength="1"/>
+        <input type="text" maxlength="1"/>
+        <input type="text" maxlength="1"/>
+        <input type="text" maxlength="1"/>
+    </form>
 </div>
 
 <div id="credit_card_number_esque">
-    <p>MaxLength: 4,4,4,4</p>
-    <input type="text" maxlength="4"/>
-    <span class="divider">-</span>
-    <input type="text" maxlength="4"/>
-    <span class="divider">-</span>
-    <input type="text" maxlength="4"/>
-    <span class="divider">-</span>
-    <input type="text" maxlength="4"/>
+    <form action="#">
+        <p>MaxLength: 4,4,4,4</p>
+        <input type="text" maxlength="4"/>
+        <span class="divider">-</span>
+        <input type="text" maxlength="4"/>
+        <span class="divider">-</span>
+        <input type="text" maxlength="4"/>
+        <span class="divider">-</span>
+        <input type="text" maxlength="4"/>
+    </form>
 </div>
 
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
